[tool.poetry]
name = "suinspy"
version = "0.1.1"
description = "Sui Name Service Python SDK Client"
authors = ["andreidev1 <d.andrei01@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pysui = "0.30.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
