[tool.poetry]
name = "suinspy"
version = "0.1.3"
description = "Sui Name Service Python SDK Client"
authors = ["andreidev1 <andreid.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pysui = "^0.32.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
